# md-img-description

./: .gitignore  Dockerfile  klage.md  main.py  pyproject.toml  test_extraction.py
.forgejo/workflows/: docker.yml
.github/workflows/: docker.yml
src/: ai_describer.py  image_extractor.py  markdown_handler.py  pdf_processor.py  processor.py  server.py
tests/: test_image_loader.py
